[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menus/menu.gd" type="Script" id=1]

[node name="menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="menu" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 64.0
margin_top = 40.0
margin_right = 936.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_1" type="Panel" parent="menu"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 872.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu/page_1"]
margin_left = 16.0
margin_top = 16.0
margin_right = 106.0
margin_bottom = 32.0
rect_scale = Vector2( 2.96042, 2.96042 )
text = "--Map--"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_page" type="Label" parent="menu/page_1"]
margin_left = 16.0
margin_top = 88.0
margin_right = 106.0
margin_bottom = 104.0
rect_scale = Vector2( 2.96042, 2.96042 )
text = "current_room:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all_rooms" type="Label" parent="menu/page_1"]
margin_left = 16.0
margin_top = 136.0
margin_right = 300.0
margin_bottom = 217.0
rect_scale = Vector2( 2.96042, 2.96042 )
text = "all_rooms:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_2" type="Panel" parent="menu"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 872.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu/page_2"]
margin_left = 16.0
margin_top = 16.0
margin_right = 106.0
margin_bottom = 32.0
rect_scale = Vector2( 2.96042, 2.96042 )
text = "--Items--"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_3" type="Panel" parent="menu"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 872.0
margin_bottom = 504.0

[node name="title" type="Label" parent="menu/page_3"]
margin_left = 16.0
margin_top = 16.0
margin_right = 106.0
margin_bottom = 32.0
rect_scale = Vector2( 2.96042, 2.96042 )
text = "--Help--"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_4" type="Panel" parent="menu"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 872.0
margin_bottom = 504.0

[node name="title" type="Label" parent="menu/page_4"]
margin_left = 16.0
margin_top = 16.0
margin_right = 106.0
margin_bottom = 32.0
rect_scale = Vector2( 2.96042, 2.96042 )
text = "--Menu--"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
